k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: country-info
  labels:
    name: country-info
