k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: country-information
  namespace: country-info
  labels:
    app: country-information
spec:
  selector:
    matchLabels:
      app: country-information
  replicas: 2
  template:
    metadata:
      labels:
        app: country-information
    spec:
      volumes:
        - name: logback-mount
          configMap:
            name: logback-configmap
      containers:
        - name: country-information
          image: country-information:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: logback-mount
              mountPath: /mnt/configmap/logback/
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
